--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
+		    try clicking it too :)
 		    Alessandra P, apcsa bl 4
 	    </footer>
 	</body>
